k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier
  labels:
    app: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wiings09/book-backend:v1
          ports:
            - containerPort: 4001
          livenessProbe:
            httpGet:
              path: /ok
              port: 4001
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ok
              port: 4001
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
