k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: bookstoreapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels: 
        app: backend
    spec:
      containers:
      - name: backend
        image: wiings09/book-backend:v1
        ports:
        - containerPort: 4001
