k8s/ingress-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ing
  namespace: three-tier
  annotations:
    # Optional: Enable path rewriting (strips /api from the URL)
    # haproxy.org/path-rewrite: /api/(.*) /\1
spec:
  ingressClassName: haproxy
  rules:
  - host: ksyitsolve.org.com
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 4001
